--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>4 de Novembro</title>
 </head>
 <body>
+    <center>
     FLU
     <br>
     <img scr="FLU.png">
+    </center>
 </body>
 </html>
