--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <center>
     FLU
     <br>
+    GERMAN CANO
+    <br>
     <img scr="https://github.com/BernardoRigolon/site/assets/163181939/d30f76b9-a057-4e2a-b7bf-6c94b401971e">
     </center>
 </body>
